--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -9,11 +9,11 @@
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
+    "moduleResolution": "nodenext",
+    "module": "NodeNext",
     "baseUrl": ".",
     "paths": {
-      "@renderer/*": [
-        "src/renderer/src/*"
-      ]
+      "@/*": ["src/renderer/src/*"]
     }
   }
 }
