--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.12",
+    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-router": "^1.112.18",
+    "@types/uuid": "^10.0.0",
     "ai": "^4.1.54",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -43,10 +48,14 @@
     "lucide-react": "^0.479.0",
     "react-hotkeys-hook": "^4.6.1",
     "react-markdown": "^10.0.1",
+    "react-scan": "^0.2.12",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "uuid": "^11.1.0",
+    "yaml": "^2.7.0",
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -56,8 +65,8 @@
     "@tanstack/router-devtools": "^1.112.18",
     "@tanstack/router-plugin": "^1.113.0",
     "@types/node": "^22.13.9",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "electron": "^35.0.0",
     "electron-builder": "^25.1.8",
@@ -66,8 +75,8 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "typescript": "^5.7.3",
     "vite": "^6.1.0"
   },
