--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,7 +4,12 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts",
+    "src/types/**/*",
+    "src/features/**/types.ts",
+    "src/features/**/renderer/**/*",
+    "src/features/**/preload/**/*.d.ts",
+    "src/core/**/*"
   ],
   "compilerOptions": {
     "composite": true,
@@ -13,7 +18,9 @@
     "module": "NodeNext",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/renderer/src/*"]
+      "@/*": ["src/renderer/src/*"],
+      "@features/*": ["src/features/*"],
+      "@core/*": ["src/core/*"]
     }
   }
 }
