--- a/package.json
+++ b/package.json
@@ -23,10 +23,18 @@
     "@ai-sdk/anthropic": "^1.1.15",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@hookform/resolvers": "^4.1.3",
     "@modelcontextprotocol/sdk": "^1.6.1",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
@@ -46,13 +54,18 @@
     "electron-updater": "^6.3.9",
     "json-schema-to-zod": "^2.6.0",
     "lucide-react": "^0.479.0",
+    "next-themes": "^0.4.4",
+    "react-hook-form": "^7.54.2",
     "react-hotkeys-hook": "^4.6.1",
     "react-markdown": "^10.0.1",
+    "react-resizable-panels": "^2.1.7",
     "react-scan": "^0.2.12",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "yaml": "^2.7.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
