--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux"
+    "build:linux": "electron-vite build && electron-builder --linux",
+    "knip": "knip"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.15",
@@ -77,7 +78,7 @@
     "@tanstack/router-cli": "^1.113.0",
     "@tanstack/router-devtools": "^1.112.18",
     "@tanstack/router-plugin": "^1.113.0",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.13.10",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -88,9 +89,10 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "knip": "^5.45.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.2",
     "vite": "^6.1.0"
   },
   "pnpm": {
