--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,12 +1,13 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
   "include": [
-    "electron.vite.config.*", 
-    "src/main/**/*", 
+    "electron.vite.config.*",
+    "src/main/**/*",
     "src/preload/**/*",
     "src/features/**/main/**/*",
     "src/features/**/services/**/*",
     "src/features/**/preload/**/*",
+    "src/features/**/types/**/*",
     "src/features/**/types.ts",
     "src/types/**/*",
     "src/core/**/*"
@@ -15,6 +16,11 @@
     "composite": true,
     "types": ["electron-vite/node"],
     "moduleResolution": "nodenext",
-    "module": "NodeNext"
+    "module": "NodeNext",
+    "baseUrl": ".",
+    "paths": {
+      "@features/*": ["src/features/*"],
+      "@core/*": ["src/core/*"]
+    }
   }
 }
