--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mcp-client-app",
   "version": "1.0.0",
   "description": "An Electron application with React and TypeScript",
-  "main": "./out/main/index.js",
+  "main": "./out/backend/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
   "scripts": {
@@ -59,9 +59,12 @@
     "next-themes": "^0.4.4",
     "react-hook-form": "^7.54.2",
     "react-hotkeys-hook": "^4.6.1",
-    "react-markdown": "^10.0.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "react-scan": "^0.2.12",
+    "react-virtualized-auto-sizer": "^1.0.25",
+    "react-window": "^1.8.11",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
@@ -93,6 +96,7 @@
     "knip": "^5.45.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "repomix": "^0.2.39",
     "typescript": "^5.8.2",
     "vite": "^6.1.0"
   },
