--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,9 +2,9 @@
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
   "include": [
     "electron.vite.config.*",
-    "src/main/**/*",
+    "src/backend/**/*",
     "src/preload/**/*",
-    "src/features/**/main/**/*",
+    "src/features/**/backend/**/*",
     "src/features/**/services/**/*",
     "src/features/**/preload/**/*",
     "src/features/**/types/**/*",
@@ -20,7 +20,8 @@
     "baseUrl": ".",
     "paths": {
       "@features/*": ["src/features/*"],
-      "@core/*": ["src/core/*"]
+      "@core/*": ["src/core/*"],
+      "@backend/*": ["src/backend/src/*"]
     }
   }
 }
